fix: poster sizing on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,8 +35,8 @@
 	figure {
 		position: relative;
 		padding: 0; margin: 0;
-		min-width: 110px;
-		min-height: 145px;
+		// min-width: 110px;
+		// min-height: 145px;
 		background: var(--b_low);
 	}
 	figcaption {
